# martinpetkovski.github.io

./: .gitignore  Animations.js  CNAME  KeyboardControl.js  LICENSE  Leslie.js  Main.js  PamTypewriter.js  RonTheSkillful.js  TomScroller.js  angelic_test.txt  animation.html  bands.json  contact.html  core.css  dates.txt  experience.html  footer.html  games.html  gateway.html  general.css  graphicdesign.html  hobbies.html  humanlanguages.html  index.html  index_uncp.html  m.js  main.css  main.js  music.html  other.html  package.json  programming.html  reviews.json  sound.html  spook.html  story.json  translations.js  video.html
.well-known/: discord
alg/: styles.css
asp/: diskusija.html  grupi.doc  index.html  kontakt.html  main.js  napatstvija.html  prezentacii.html  psevdokod.html  style.css  vezhbi01.cpp  vezhbi02.cpp
checkmeg/: index.html
data/: reviews.json
eats/: index.html
familytree/: index.html  script.js  styles.css
hacks/: odgovori.html
includes/: footer.html
izvesnaivana/: core.css  index.html
kamaiaudio/: index.html  releases.json
makedonski/: index.html  rg7f8asubid.html  slog.js
manifest/: index.html
masterlista/: admin.html  bands.json  chart-data.json  chart.html  desktop.css  guide.html  index.html  list.html  mobile.css  releases.html  script.js  spotify-api.js  spotify-credentials.example.json  styles.css
mkstats/: index.html
music/: index.html
n/: index.html
najjak/: CNAME
ns2/: NSE2.js  NSE2.wasm  about.html  ai.html  play.js  (+8 more)
ytcut/cpp/: CMakeLists.txt  README.md  build_windows.ps1  package_windows.ps1  ytcut.cpp
(+342 files in other folders)
